Update jenkins ci